--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,9 @@ serde = { version = "1.0", features = ["derive"] }
 tower-http = { version = "0.5", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+alloy-transport-http = "1.6.1"
+alloy-signer = "1.6.1"
+alloy-signer-local = "1.6.1"
+alloy-rpc-types = "1.6.1"
+alloy-primitives = "1.5.4"
 
